# agent3-tender

./: .env.example  .gitignore  CLAUDE.md  README.md  bootstrap_agent3_tender.sh  pyproject.toml
.github/workflows/: agent3-tender.yml
src/agent3_tender/: config.yaml  run.py
src/agent3_tender/core/: dedupe.py  digest.py  health.py  http.py  models.py  scoring.py  store.py
src/agent3_tender/sources/: oeffentlichevergabe.py  signals.py  ted.py
tests/: conftest.py  test_dedupe.py  test_digest_sort.py  test_health.py  test_models.py  test_oev_parsing.py  test_scoring_contract.py  test_signals_parsing.py  test_store.py  test_ted_parsing.py
tests/fixtures/: oev_sample.json  ted_sample.json
