[project]
name = "agent3-tender"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "anthropic>=0.40",
  "tenacity>=9.0",
  "rapidfuzz>=3.9",
  "aiosmtplib>=3.0",
  "jinja2>=3.1",
  "markdown-it-py>=3.0",
]

[dependency-groups]
dev = ["ruff>=0.6", "pytest>=8.0", "pytest-asyncio>=0.23", "respx>=0.21"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"src/agent3_tender/core/digest.py" = ["E501", "RUF001"]
"src/agent3_tender/core/scoring.py" = ["E501"]
"tests/test_digest_sort.py" = ["RUF001"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
